fix: Remove deprecated no-sound-null-safety flag from Flutter build

--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -51,7 +51,7 @@ jobs:
       
       # APK Build (Release mode)
       - name: Build APK (Release)
-        run: flutter build apk --release --no-sound-null-safety
+        run: flutter build apk --release
       
       # APK Build (Debug mode - alternatif)
       - name: Build APK (Debug)
